--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.verygoodcore.my_news">
+    package="com.basith.my_news">
     <application
         android:label="${appName}"
         android:name="${applicationName}"
