--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  cached_network_image: ^3.3.1
   firebase_core: ^3.2.0
   fluentui_system_icons: ^1.1.248
   flutter:
