--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cached_network_image: ^3.3.1
+  firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
   fluentui_system_icons: ^1.1.248
   flutter:
@@ -18,6 +19,7 @@ dependencies:
     sdk: flutter
   go_router: ^14.2.1
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   bloc_test: ^9.1.7
