--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,3 +2,8 @@ include: package:very_good_analysis/analysis_options.6.0.0.yaml
 linter:
   rules:
     public_member_api_docs: false
+
+analyzer:
+  errors:
+    invalid_annotation_target: ignore
+    inference_failure_on_function_invocation: ignore
