--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cached_network_image: ^3.3.1
+  dio: ^5.5.0+1
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
   fluentui_system_icons: ^1.1.248
@@ -17,14 +18,19 @@ dependencies:
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^2.4.4
   go_router: ^14.2.1
   intl: ^0.19.0
+  json_annotation: ^4.9.0
   provider: ^6.1.2
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  build_runner: ^2.4.11
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
