--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   intl: ^0.19.0
   json_annotation: ^4.9.0
   provider: ^6.1.2
+  timeago: ^3.7.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
