--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ flutter:
   uses-material-design: true
   generate: true
 
+  assets:
+    - assets/images/
+
   fonts:
     - family: Poppins
       fonts:
