--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cached_network_image: ^3.3.1
+  cloud_firestore: ^5.1.0
   dio: ^5.5.0+1
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
