--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,10 @@ dependencies:
   cached_network_image: ^3.3.1
   cloud_firestore: ^5.1.0
   dio: ^5.5.0+1
+  firebase_analytics: ^11.2.0
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
+  firebase_remote_config: ^5.0.3
   fluentui_system_icons: ^1.1.248
   flutter:
     sdk: flutter
